--- a/css/custom.css
+++ b/css/custom.css
@@ -1,18 +1,22 @@
 .out_container{
-    border: 5px solid rgb(240, 190, 29);
+    border: 0.1px solid rgb(240, 190, 29);
     background-color: rgb(196, 22, 115);
 }
 .container{
-    border: 5px solid rgb(29, 240, 29); 
+    position: relative;
+    /* border: 5px solid rgb(29, 240, 29);  */
     margin: 4rem;
     background-color: #f5f1ed; 
 
 }
 .container-fluid{
+    top: -10px;
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     flex-direction:row;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 .headerdiv{
     display: flex;
@@ -20,33 +24,63 @@
     flex-direction: row;
     justify-content: space-between;
     align-content: center;
-    margin: 2rem;
+    margin: 1rem 1rem 1rem 1rem;
 }
-.search_div, input{
+.logo_img{
+    width: 2.8rem;
+    height: 1.9rem;
+    margin: 0;
+    padding: 0;
+}
+.userlogin{
+    display: inline-flex;
+    align-content:center;
+    align-items: center;
+   
+}
+.user_login_img{
+    width: 2rem;
+    height: 2rem;
+    margin: 5px;
+}
+.inputsearch{
     font-size: large;
-    width: 25rem;
-    border: 0.8px rgb(184, 177, 224);
-    height: 2.8rem;
-    border-radius: 0.7vw;
+    position: relative;
+    width: 27rem;
+    background-color: #d4d4f5;
+    border: 0.2px rgb(194, 189, 236);
+    height: 2rem;
+    border-radius: 0.9vw;
     margin: auto;
 }
-.search_div:hover{
-    width: 16rem;
-     border: 0.8px rgb(145, 145, 182);
-    height: 2.9rem;
+.inputsearch:hover{
+    font-size: large;
+    position: relative;
+    width: 28.8rem;
+    background-color: #d4d4f5;
+    border: 0.1px rgb(180, 217, 238);
+    height: 2rem;
     border-radius: 0.7vw;
-    margin: auto;
 }
+div.right_head table th{
+    padding: 0 0 0 1.5rem;
+    margin:  0 0 2rem 1rem;
+    text-align: justify;
+}
+.user_name{
+    padding-bottom: 1rem;
+}
+
 th img{
     width: 20rem;
     height: 20rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     border-radius: 10vw;
 }
 
 .nav{
     width: 15%;
-    height: 70rem;
+    height: 62rem;
     background-color: rgb(31, 30, 30);
     border: 2px solid rgb(2, 65, 18);
 }
@@ -55,7 +89,7 @@ th img{
 
 }
 .nav_box table th{
-    width: 9rem;
+    width: 15rem;
     height: 3.4rem;
     color: #f5f1ed;
     text-align: center;
@@ -66,55 +100,57 @@ th img{
 .nav_box table th:hover{
     text-align: center;
     background-size:cover;
-    background-color: rgb(134, 25, 102);
-    border-radius: 0.6vw;
+    background-color: rgb(223, 12, 110);
+    border-radius: 0vw;
     cursor: pointer;
     margin: auto;
 
 }
 .img_div{
+    padding: 0%;
+    margin: 0%;
     background-color: hwb(30 93% 4%);
 }
 .head_img_div{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content:space-around;
+    flex: auto;
 }
-.img_div figure img{
-    border: 2px solid red;
-    width: 20rem;
-    height: 20rem;
+.head_img{
+    /* border: 2px solid red; */
+    width: 32.7%;
+    height: 34%;
    
   
 
 }
 .figcap_name{
     font-size: larger;
-    padding: 1rem 0 0 0;
-    margin: 2rem 0 0 0;
+    padding: 2rem 0 1rem 2rem;
+    margin:0;
+    line-height: 1rem;
+    text-transform: uppercase;
 }
-.figcap_btn_div{
-    display: flex;
-   flex-direction: row;
-    justify-content: end;
-}
-.figcap_btn_div figcaption{
-    padding: 0 ;
-    margin: 0 ;
-}
-.figcap_btn{
-    width: 8rem;
-    height: 3.7rem;
-    font-size: larger;
-    font-weight: bolder;
-    float:right;
-    background-color: rgb(131, 11, 95);
-    margin-left: 2rem;
-    color: #f5f1ed;
-    border-radius: 0.6vw;
-
-}
+.anchor_btn{
+    padding-left: 41.6rem;
+    }
+    .figcap_btn{
+     width: 5rem;
+     height: 3.5rem;
+     color: aliceblue;
+     font-size: large;
+     font-weight: bold;
+     text-align: justify;
+     background-color: rgb(204, 5, 144);
+     border: 0px;
+    }
+    .anchor{
+        padding: 1rem;
+        color: rgb(190, 35, 87);
+        word-spacing: 1px;
+        text-decoration: underline;
+    }
 .footer_div{
     text-align: center;
     font-size: large;
@@ -122,18 +158,21 @@ th img{
     margin-top: 40rem;
 }
 .main_section{
-  
+  margin: 0;
+  padding: 0;
     width: 84%;
     height: 100%;
-    border: 3px solid rgb(230, 9, 9);
+    /* border: 3px solid rgb(230, 9, 9); */
 }
+
 .sec_box{
     display: flex;
     flex-wrap: wrap;
     flex-direction:row;
     background-color: rgba(211, 206, 206, 0.952);
-    border: 4px solid rgb(189, 230, 9);
+    /* border: 4px solid rgb(189, 230, 9); */
 }
+
 .section{
     margin:4rem;
     width: 50%;
@@ -141,18 +180,26 @@ th img{
     margin-top: 4rem;
     text-align: justify;
     background-color:white;
-    border: 2px solid rgb(0, 255, 85);
+    /* border: 2px solid rgb(0, 255, 85); */
+}
+.para_div{
+    padding: 1.7rem;
 }
 .para2_div{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 
 }
 .para2_div p{
     width: 15rem;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+.user_img{
+    width: 4rem;
+    height: 4rem;
+    border-radius: 2vw;
 }
 .feedback{
     display: flex;
@@ -163,13 +210,20 @@ th img{
     text-align: justify;
  width: 20%;
  height: 100%;
-    border: 2px solid rgb(255, 0, 157);
+    /* border: 2px solid rgb(255, 0, 157); */
 }
 .feedback1{
 background-color: beige;
 }
 .feedback2{
     background-color: beige;
+}
+.feedback_profile{
+    display: inline-flex;
+    align-content:center;
+    align-items: center;
+    text-align: justify;
+
 }
 .show_all{
     margin-left: 8rem;
@@ -179,7 +233,7 @@ background-color: beige;
     width: 10rem;
     text-align: justify;
     font-size: large;
-    margin: 4rem 0 0 1rem;
+    margin: 4rem 0 0 2rem;
     position: relative;
     z-index: 1;     
     
@@ -191,6 +245,6 @@ background-color: beige;
     color: #f5f1ed;
     width: 10rem;
     height: 4rem;
-    border-radius: 0.6vw;
+    border-radius: 1vw;
     background-color: rgb(121, 8, 76);
 }
